--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,7 @@ authors = [
     {email = "team@choosek.com"}
 ]
 dependencies = [
-    "py-nillion-client",
-    "nada-dsl",
-    "nillion-python-helpers",
-    "python-dotenv==1.0.0",
-    "cosmpy>=0.9.2"
+    "nada-dsl"
 ]
 
 [build-system]
