--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,22 @@ dependencies = [
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+
+[project.optional-dependencies]
+docs = [
+    "toml~=0.10.2",
+    "sphinx~=5.3.0",
+    "sphinx-rtd-theme~=1.0.0",
+    "sphinx-autodoc-typehints~=1.12.0"
+]
+test = [
+    "coverage~=7.6.1"
+]
+lint = [
+    "pylint~=2.17.0"
+]
+publish = [
+    "build~=0.10",
+    "twine~=4.0"
+]
